# Semantic-Segmentation-of-Satellite-Imagery

./: README.md  baseline-performace.md  pyproject.toml
docs/: baseline-performace.md  hyperparameter-optimization.md  knowledge-distillation.md
src/: 228_training_aerial_imagery.py  distiller.py  worker.py
src/models/: checkpoint  satellite_standard_unet_student_weights.index
src/nni_hello_hpo/: main.py
